Fixing horizontal scrollbar, and responsive font size.

--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -15,15 +15,6 @@
 
 }
 
-/* .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-} */
-
 .fa {
     border-radius: 50%;
     color: #ffffff !important;
@@ -38,7 +29,7 @@
     width: 40px !important;
     background-color: #0f1e49;
     color: rgb(177, 177, 201);
-    font-size: 3rem;
+    font-size: 6rem;
     outline: none;
     text-decoration: none !important;
 }
